Liberando versão final

--- a/dwitter/templates/dwitter/dashboard.html
+++ b/dwitter/templates/dwitter/dashboard.html
@@ -39,14 +39,14 @@
     </div>
     <div class="block">
         <div class="block">
-            <h2 class="title is-5">Nova msg</h2>
+            <h2 class="title is-5">Novo Zweet</h2>
         </div>
         <div class="block">
             <form method="post">
                 {% csrf_token %}
                 {{ form.as_p }}
                 <button class="button is-success is-fullwidth is-medium mt-5"
-                        type="submit">Gravar
+                        type="submit">Publicar
                 </button>
             </form>
         </div>
