--- a/dwitter/templates/base.html
+++ b/dwitter/templates/base.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet"
           href="https://cdn.jsdelivr.net/npm/bulma@0.9.3/css/bulma.min.css">
     <title>Zwitter</title>
+    <script src="https://kit.fontawesome.com/d3fd653aab.js" crossorigin="anonymous"></script>
 </head>
 <head>
 <script type="text/javascript">
@@ -74,23 +75,53 @@ return m;
     <a href="{% url 'dwitter:dashboard' %} ">
     <section class="hero is-small is-success mt-7">
             <div class="hero-head is-small has-text-right">
-                <!--<div class="block">
-                    <a href="{% url 'dwitter:logout' %}">
-                    <button class="button is-rounded is-small is-selected is-hovered is-outlined has-text-right">
-                        Sair
-                        <span class="icon is-small">
-                            <i class="fas fa-times"></i>
-                        </span>
-                    </button>
-                    </a>
-                </div>-->
                 <div class="navbar-end">
                     <div class="navbar-item">
                       <div class="buttons">
-                        <a class="button is-rounded is-small is-success is-light is-hovered is-outlined"
-                           href="{% url 'admin:password_change' %}"> Trocar senha </a>
-                        <a class="button is-rounded is-small is-success is-light is-hovered is-outlined"
-                           href="{% url 'dwitter:logout' %}"> Sair</a>
+                          {% if user.is_authenticated %}
+                            {% if existe_convite %}
+                                <a class="button is-rounded is-small is-success is-light is-hovered is-outlined"
+                                    href="{% url 'dwitter:convites' %}">
+                                    <span class="icon">
+                                        <i class="fa-solid fa-user-plus"></i>
+                                    </span>
+                                    <span> Convites </span>
+                                </a>
+                            {% endif %}
+                            {% if existe_mensagem %}
+                               {% if existeMsgNaoLida %}
+                                    <a class="button is-rounded is-small is-danger is-light is-hovered is-outlined"
+                                        href="{% url 'dwitter:mensagens' %}">
+                                    <span class="icon">
+                                        <i class="fa-solid fa-envelope-open-text"></i>
+                                    </span>
+                                    <span> Mensagens </span>
+                                    </a>
+                               {% else %}
+                                    <a class="button is-rounded is-small is-success is-light is-hovered is-outlined"
+                                        href="{% url 'dwitter:mensagens' %}">
+                                    <span class="icon">
+                                        <i class="fa-solid fa-envelope"></i>
+                                    </span>
+                                    <span> Mensagens </span>
+                                    </a>
+                               {% endif %}
+                            {% endif %}
+                            <a class="button is-rounded is-small is-success is-light is-hovered is-outlined"
+                                    href="{% url 'dwitter:password_change' %}">
+                                    <span class="icon">
+                                        <i class="fa-solid fa-key"></i>
+                                    </span>
+                                    <span> Trocar senha </span>
+                            </a>
+                            <a class="button is-rounded is-small is-success is-light is-hovered is-outlined"
+                                    href="{% url 'dwitter:logout' %}">
+                                    <span class="icon">
+                                        <i class="fa-solid fa-person-walking-arrow-right"></i>
+                                    </span>
+                                    <span> Sair </span>
+                            </a>
+                         {% endif %}
                       </div>
                     </div>
                 </div>
