--- a/dwitter/templates/base.html
+++ b/dwitter/templates/base.html
@@ -75,6 +75,21 @@ return m;
     <a href="{% url 'dwitter:dashboard' %} ">
     <section class="hero is-small is-success mt-7">
             <div class="hero-head is-small has-text-right">
+                {% if user.is_authenticated %}
+                    <div class="navbar-menu">
+                    <div class="navbar-start">
+                        <div class="navbar-item">
+                          <div class="content is-size-7 ">
+                              <a href="{% url 'dwitter:convidar_amigo' %}">
+                                  <span class="icon">
+                                        <i class="fa-solid fa-users"></i>
+                                  </span>
+                                  <span>Convide um(a) amigo(a) </span>
+                              </a>
+                          </div>
+                        </div>
+                    </div>
+                {% endif %}
                 <div class="navbar-end">
                     <div class="navbar-item">
                       <div class="buttons">
@@ -125,29 +140,30 @@ return m;
                       </div>
                     </div>
                 </div>
+                </div>
             </div>
 
             <div class="hero-body is-small">
                 <div class="block">
                     <a href="{% url 'dwitter:dashboard' %}">
-                    <h1 class="title is-1 is-size-3">Zwitter
+                    <h1 class="title is-1 is-size-3 has-text-centered">Zwitter
                         <span class="is-small is-size-5"> - a rede social do Zé Maria </span>
                     </h1>
                     </a>
                 </div>
-                <div class="block">
+            </div>
+            <div class="hero-foot is-small">
                     {% if user.is_authenticated %}
-                        <p class="is-size-5 has-text-right"> Bem vindo(a) <strong>
-                            {{request.user.username}}</strong>
+                    <!--<div class="column is-one-half">-->
+                        <p class="title is-size-5 has-text-right"> Bem vindo(a) <strong>
+                            {{request.user.username}} </strong>
                         </p>
+                    <!--</div>-->
                     {% else %}
                         <p class="is-size-4 has-text-right"> Bem vindo
                         </p>
                     {% endif %}
-                    <!--<span class="is-size-5 has-text-left" onload="startTime()"> <div>id="txt"></div>
-                    </span>-->
 
-                </div>
             </div>
 
 
