Mensagem quando envia convite para seguir

--- a/dwitter/templates/dwitter/profile.html
+++ b/dwitter/templates/dwitter/profile.html
@@ -35,6 +35,8 @@
             </span>
         </div>
     {% endfor %}
+    <p class="notification is-size-5 has-text-centered"> {{ resp }}
+    </p>
     </div>
 </div>
 
